--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ img {
 }
 
 .card>*,
-.card>div>*:not(#testimonials .card>div>*) {
+.card>div>*:not(#testimonials .card>div>*, .button-container>button) {
     padding-top: 20px;
 }
 
@@ -382,6 +382,50 @@ section:nth-of-type(even) {
 }
 
 /*#endregion Testimonials  */
+
+/*#region Benefits  */
+
+#benefits {
+    padding-bottom: 100px;
+}
+
+#benefits h2 {
+    text-align: center;
+    color: white;
+    font-size: 2.5rem;
+    padding: 70px 0;
+}
+
+#benefits .col {
+    row-gap: 50px;
+}
+
+#benefits .card {
+    text-align: left;
+}
+
+#benefits .card-number {
+    font-size: 3rem;
+    color: var(--even-section-bg-color);
+    font-weight: bold;
+    padding: 20px 0;
+}
+
+#benefits h3 {
+    color: var(--even-section-bg-color);
+    font-size: 2rem;
+    padding: 20px 0;
+}
+
+#benefits button {
+    background-color: var(--even-section-bg-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 10px 50px;
+}
+
+/*#endregion Benefits  */
 
 /*#endregion Main  */
 
