--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,8 @@ a {
     padding: 0 20px;
 }
 
-.quoted-text {
+.quoted-text,
+.founder-quote {
     quotes: "“""”";
 }
 
@@ -200,19 +201,26 @@ img {
 }
 
 .quoted-text::before,
-.quoted-text::after {
+.quoted-text::after,
+#about-us .img-container::after {
     font-size: 70px;
     color: #fff;
     line-height: 0;
     vertical-align: bottom;
 }
 
-.quoted-text::before {
+.quoted-text::before,
+#about-us .img-container::after {
     content: open-quote;
 }
 
 .quoted-text::after {
     content: close-quote;
+}
+
+#strategic-planning,
+#about-us {
+    padding: 100px 0;
 }
 
 /*#endregion Shared  */
@@ -300,10 +308,6 @@ section:nth-of-type(even) {
 /*#endregion Product Presentation  */
 
 /*#region Strategic Planning  */
-
-#strategic-planning {
-    padding: 100px 0;
-}
 
 .planning-caption {
     color: white;
@@ -426,6 +430,56 @@ section:nth-of-type(even) {
 }
 
 /*#endregion Benefits  */
+
+/*#region About Us  */
+
+#about-us .summary>*,
+#about-us .founder-quote>* {
+    padding: 30px 0;
+}
+
+#about-us h2 {
+    padding-top: 0;
+    font-size: 3rem;
+    color: var(--even-section-bg-color);
+}
+
+#about-us img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+#about-us .img-container {
+    position: relative;
+}
+
+#about-us .img-container::after {
+    color: var(--even-section-bg-color);
+    font-size: 15rem;
+    position: absolute;
+    bottom: 100px;
+    left: 140px;
+}
+
+#about-us .caption {
+    color: var(--even-section-bg-color);
+    font-weight: bold;
+    font-size: 2.2rem;
+    line-height: 2.5rem;
+}
+
+#about-us i {
+    padding-right: 5px;
+}
+
+#about-us button {
+    color: white;
+    background-color: var(--even-section-bg-color);
+}
+
+/*#endregion About Us  */
 
 /*#endregion Main  */
 
