--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ section:nth-of-type(even) {
     line-height: 2.5rem;
 }
 
-#get-started p:nth-of-type(2) {
+#get-started p:last-of-type {
     color: #fbc060;
     padding: 30px 0;
     font-size: 3rem;
@@ -635,6 +635,22 @@ footer {
     }
 
     /*#endregion About Us  */
+
+    /*#region Get Started  */
+    #get-started p:first-of-type {
+        font-size: 3rem;
+    }
+
+    #get-started p:last-of-type {
+        font-size: 6rem;
+        padding: 60px 0;
+    }
+
+    #get-started .caption {
+        padding: 10px 20%;
+    }
+
+    /*#endregion Get Started  */
 
 }
 
