Sezione Get Started per desktop

--- a/css/style.css
+++ b/css/style.css
@@ -740,6 +740,13 @@ footer {
 
     /*#endregion About Us  */
 
+    /*#region Get Started  */
+    #get-started .caption {
+        padding: 10px 30%;
+    }
+
+    /*#endregion Get Started  */
+
 }
 
 
