--- a/css/style.css
+++ b/css/style.css
@@ -530,10 +530,25 @@ section:nth-of-type(even) {
 
 /*#endregion Main  */
 
+/*#region Footer  */
+
 footer {
     background-color: #333333;
+    color: white;
+    text-align: center;
+    padding: 50px 0;
 }
 
+footer p:first-child {
+    padding-bottom: 50px;
+}
+
+footer a {
+    text-decoration: underline;
+    color: var(--even-section-bg-color);
+}
+
+/*#endregion Footer  */
 
 /*#endregion Content */
 
