Rimozione classe debug + possibili todo aggiuntivi

--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,13 @@ footer a {
 
 /*#endregion Mediaquery  */
 
+/* TODO Possibili aggiuntivi
+
+Personalizzazione dell'hover dei bottoni
+Personalizzaione dell'hover dei li del menu espanso
+
+*/
+
 /*#region DEBUGGER */
 
 .debug section {
