--- a/css/style.css
+++ b/css/style.css
@@ -774,8 +774,11 @@ footer a {
 
 /* TODO Possibili aggiuntivi
 
+Refactoring
 Personalizzazione dell'hover dei bottoni
 Personalizzaione dell'hover dei li del menu espanso
+Aggiunta di <a> dove opportuno
+Aggiunta di commenti migliori
 
 */
 
